# sotrplib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config_tiger3_act.json  pyproject.toml  sample.json  sample_read_act_mapcat.json  sample_read_filtered_map.json  sample_read_map.json  sample_read_mapcat.json  sample_read_spt_maps.json  sample_read_unfiltered_map.json  sample_read_using_mapcat.json  sample_sim_map.json  tdp_pipeline.py  test_filtering.json  trp_pipeline.py
.github/workflows/: docs.yml  pytest.yml  regression.yml  ruff.yml
deprecated/: lightcurves.py
docs/: README.md  act.md  api.rst  conf.py  configuration.md  flowchart.md  index.rst  installing.md
scripts/act_depth1_transient_sims/: example_gaussian_sim_pipeline.json  generate_transients_for_act.py
scripts/coadding/: coadd_maps.py
scripts/depth1_map_analysis/: slurm_submitter.py  slurm_wrapper_act_depth1_map_analysis.py  slurm_wrapper_depth1_map_analysis.py  slurm_wrapper_mapcat_depth1_analysis.py  slurm_wrapper_mapcat_depth1_analysis_nersc.py  slurm_wrapper_websky_depth1_map_analysis.py
scripts/end_to_end/: .env  .gitignore  README.md  config.json  lightserver.py  mock_socat.py  run.sh
scripts/historical_lightcurve_extractor/: __init__.py  act_coadd_thumbnail_extractor.py  act_depth1_lightcurve_extractor.py  collate_lightcurves.py  slurm_submitter.py  slurm_wrapper_depth1_lightcurves.py  slurm_wrapper_mapcat_historical_extractor.py
sotdplib/: cmb_minor_planets.py  crossmatch.py  filters.py  filters.py~  inputs.py  lightcurve.py  lightcurve.py~  maps.py  masks.py  pipeline.py  pipeline.py~  plot.py  query_tools.py  tiles.py  tools.py  tools.py~  trp_pipeline.py~
sotdplib/catalogs/: cmb_minor_planets.py
sotdplib/lightcurves/: __init__.py  lightcurves.py
sotdplib/maps/: __init__.py  maps.py
sotdplib/observatories/: __init__.py  observatories.py
sotdplib/sources/: __init__.py  sources.py
sotdplib/utils/: plot.py  utils.py
sotrplib/: __init__.py  cli.py
sotrplib-old/: __init__.py
sotrplib-old/catalogs/: __init__.py  crossmatch.py  sourcecatalog.py
sotrplib-old/cli/: trp_pipeline.py
sotrplib-old/filters/: filters.py
sotrplib-old/maps/: __init__.py  maps.py  masks.py
sotrplib-old/observatories/: observatories.py  observatory_information.json
sotrplib-old/sources/: __init__.py  sources.py
sotrplib-old/utils/: plot.py
sotrplib/catalogs/: __init__.py  cmb_minor_planets.py  sourcecatalog.py
sotrplib/cli/: trp_pipeline.py
sotrplib/config/: blind_search.py  config.py  forced_photometry.py  map_coadding.py  maps.py  outputs.py  pointing_residual.py  postprocessors.py  preprocessors.py  sifter.py  source_catalog.py  source_injector.py  source_simulation.py  source_subtractor.py  sso_catalog.py  test_config.json  tiger3_actpol_config.json  tiger3_config.json
sotrplib/data/: __init__.py  catalog.py  maps.py  sources.py
sotrplib/filters/: __init__.py  actpol_filter.py  filters.py
sotrplib/handlers/: base.py  basic.py  prefect.py
sotrplib/lightcurves/: __init__.py  lightcurves.py
sotrplib/map_io/: __init__.py  load_maps.py
sotrplib/maps/: __init__.py  coadding.py  core.py  database.py  map_coadding.py  maps.py  (+7 more)
tests/: conftest.py  test_config.py
(+89 files in other folders)
