[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sotrplib"
version = "0.0.1a1"
requires-python = ">=3.11"
dependencies = [
    "pixell",
    "numpy",
    "astropy",
    "pandas",
    "scipy",
    "astroquery",
    "matplotlib",
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "filelock",
    "photutils",
    "structlog",
    "scikit-image",
    "socat @ git+https://github.com/simonsobs/socat",
    "astropydantic",
    "numpydantic",
    "mapcat",
    "prefect",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "coverage",
    "pytest-cov",
    "pre-commit",
]
prefect = [
    "prefect"
]

[project.scripts]
"sotrp" = "sotrplib.cli:main"
"sotrp-prefect" = "sotrplib.cli:prefect_flow"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F841"]

[tool.coverage.run]
source = [
    "sotrplib",
]
omit = [
    "sotrplib/config",
    "sotrplib/cli.py",
]