[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sotrplib"
version = "0.0.1a1"
requires-python = ">=3.11"
dependencies = [
    "pixell",
    "numpy==1.26.4",
    "astropy",
    "h5py",
    "pandas",
    "scipy",
    "astroquery",
    "matplotlib",
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "filelock",
    "photutils",
    "structlog",
    "scikit-image",
    "socat",
    "astropydantic",
    "numpydantic",
    "mapcat",
    "pyinstrument",
    "lightcurvedb @ git+https://github.com/simonsobs/lightcurvedb"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "coverage",
    "pytest-cov",
    "pre-commit",
]
prefect = [
    "prefect",
]

[project.scripts]
"sotrp" = "sotrplib.cli:main"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F841"]

[tool.coverage.run]
source = [
    "sotrplib",
]
omit = [
    "sotrplib/config",
    "sotrplib/cli.py",
]
