[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sotrplib"
version = "0.0.3"
requires-python = ">=3.12"
dependencies = [
    "pixell",
    "numpy==1.26.4",
    "astropy",
    "lmfit",
    "h5py",
    "pandas",
    "scipy",
    "astroquery",
    "matplotlib",
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "filelock",
    "photutils>=2.0",
    "structlog",
    "scikit-image",
    "socat @ git+https://github.com/simonsobs/socat",
    "skyfield",
    "astropydantic",
    "numpydantic",
    "mapcat @ git+https://github.com/simonsobs/mapcat",
    "pyinstrument",
    "lightcurvedb @ git+https://github.com/simonsobs/lightcurvedb",
    "soauth",
    "pexpect",
    "uuid7-standard",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "coverage",
    "pytest-cov",
    "pre-commit",
]
prefect = [
    "prefect",
]
spt = [
    "spt3g @ git+https://github.com/CMB-S4/spt3g_software@map_box",
    
]

[project.scripts]
"sotrp" = "sotrplib.cli:main"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F841"]

[tool.coverage.run]
source = [
    "sotrplib",
]
omit = [
    "sotrplib/config",
    "sotrplib/cli.py",
]
